// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getBoardWithOpenedSquares doesn't open flagged squares 1`] = `
[
  [
    {
      "adjacentBombs": 0,
      "isBomb": true,
      "isFlagged": false,
      "isOpen": false,
    },
    {
      "adjacentBombs": 1,
      "isBomb": false,
      "isFlagged": false,
      "isOpen": true,
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "isFlagged": true,
      "isOpen": false,
    },
  ],
  [
    {
      "adjacentBombs": 1,
      "isBomb": false,
      "isFlagged": false,
      "isOpen": true,
    },
    {
      "adjacentBombs": 1,
      "isBomb": false,
      "isFlagged": false,
      "isOpen": true,
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "isFlagged": false,
      "isOpen": true,
    },
  ],
  [
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "isFlagged": false,
      "isOpen": true,
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "isFlagged": false,
      "isOpen": true,
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "isFlagged": false,
      "isOpen": true,
    },
  ],
]
`;

exports[`getBoardWithOpenedSquares only opens one if it has adjacentBombs number 1`] = `
[
  [
    {
      "adjacentBombs": 0,
      "isBomb": true,
      "isFlagged": false,
      "isOpen": false,
    },
    {
      "adjacentBombs": 1,
      "isBomb": false,
      "isFlagged": false,
      "isOpen": true,
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "isFlagged": false,
      "isOpen": false,
    },
  ],
  [
    {
      "adjacentBombs": 1,
      "isBomb": false,
      "isFlagged": false,
      "isOpen": false,
    },
    {
      "adjacentBombs": 1,
      "isBomb": false,
      "isFlagged": false,
      "isOpen": false,
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "isFlagged": false,
      "isOpen": false,
    },
  ],
  [
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "isFlagged": false,
      "isOpen": false,
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "isFlagged": false,
      "isOpen": false,
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "isFlagged": false,
      "isOpen": false,
    },
  ],
]
`;

exports[`getBoardWithOpenedSquares opens all adjacent empty and adjacent with adjacentBombs number 1`] = `
[
  [
    {
      "adjacentBombs": 0,
      "isBomb": true,
      "isFlagged": false,
      "isOpen": false,
    },
    {
      "adjacentBombs": 1,
      "isBomb": false,
      "isFlagged": false,
      "isOpen": true,
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "isFlagged": false,
      "isOpen": true,
    },
  ],
  [
    {
      "adjacentBombs": 1,
      "isBomb": false,
      "isFlagged": false,
      "isOpen": true,
    },
    {
      "adjacentBombs": 1,
      "isBomb": false,
      "isFlagged": false,
      "isOpen": true,
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "isFlagged": false,
      "isOpen": true,
    },
  ],
  [
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "isFlagged": false,
      "isOpen": true,
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "isFlagged": false,
      "isOpen": true,
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "isFlagged": false,
      "isOpen": true,
    },
  ],
]
`;
